# MoleCool

./: .gitignore  ExampleNumPyStyle.py  LICENSE.md  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: run-examples.yml
MoleCool/: Bfield.py  Lasersystem.py  Levelsystem.py  Molecule - Copy.py  Molecule.py  System.py  __init__.py  run_examples.py  spectra.py
MoleCool/Examples/: 12+4system_Bfield.py  EIT.py  RabiOsci_2level.py  Simple3+1.py  Simple3+1_AppC2.py  SimpleTest1_BaF.py  SimpleTest2Traj_BaF.py
MoleCool/Examples/advanced/: GALLERY_HEADER.rst  demo_plot.py
MoleCool/Examples/core/: 12+4system_Bfield.py  BCF.py  EIT_ims.py  GALLERY_HEADER.rst  YbOH.py  chirp_slowing.py  cooling_forces.py  cooling_forces_RaF.py  optcycl_12+4levels.py  optcycl_3+1levels.py  plot_EIT.py  plot_RabiOsci_2level.py  plot_SimpleTest1_BaF.py  plot_SimpleTest2Traj_BaF.py  plot_spectra_RaF.py
MoleCool/Examples/demo/: GALLERY_HEADER.rst  plot_sine.py  sine.py
MoleCool/Examples/misc/: GALLERY_HEADER.rst  plot_Simple3+1.py
MoleCool/constants/: 137BaF.json  171YbOH.json  173YbOH.json  226RaF.json  CaF - modified HF.json  CaF - wrong XB vib freqs.json
MoleCool/tools/: ODEs.py  __init__.py  dict2DF.py  diststraj.py
doc/source/: Bfield.rst  ExampleNumPyStyle.rst  Lasersystem.rst  Levelsystem.rst  Molecule.rst  System.rst  api.rst  conf.py  examples.rst  index.rst  installation.rst  modules.rst  substitutions.rst  tools.rst
doc/source/_static/: custom.css
doc/source/user_guide/: getting_started.rst  index.rst  introduction.rst  quickstart.rst
mymodules/: BaFconstants.json  BaFconstants.py  Bfield.py  Lasersystem.py  Levelsystem.py  Molecule.py  System.py  constants.py  dipole_matrix_new1.pkl  dipole_matrix_new2.pkl  run_examples.py  setup.py
mymodules/Examples/: EIT.py  EIT_ims.py  RabiOsci_2level.py  Simple3+1_AppC2.py  SimpleTest1_BaF.py  SimpleTest2Traj_BaF.py
mymodules/constants/: 137BaF.json  138BaF.json  CaF.json
mymodules/tools/: ODEs.py  __init__.py  dict2DF.py  diststraj.py
(+2 files in other folders)
